feat: enhance layout and styling with Tailwind CSS classes and color variables

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,13 @@
     <link href="./output.css" rel="stylesheet">
     <title>Document</title>
   </head>
-  <body class="afl-body bg-gray-100">
-    <header>
-        <h1>Profile</h1>
+  <body class="afl-body">
+    <header class="afl-header">
+      <h1 class="afl-header__title">Profile</h1>
     </header>
+    
     <main></main>
+
     <footer></footer>
   </body>
 </html>
